--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Eduardo Albuquerque Maia
+title: Eduardo Albuquerque
 logo: /assets/img/logo.png
 google_analytics:
 theme: jekyll-theme-minimal
