--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Eduardo Maia
 logo: /assets/img/logo.png
-description: Bablabla
+description: Iniciante DevOps
 google_analytics:
 theme: jekyll-theme-minimal
