--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ title: EduTecSol
 logo: /assets/img/logo.png
 description: Iniciante em DevOps
 google_analytics:
-theme: jekyll-theme-hacker
+theme: jekyll-theme-minimal
